--- a/Source/Pekspro.RadioStorm.MAUI/App.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/App.xaml
@@ -24,6 +24,8 @@
             <Color x:Key="PanelBackgroundLight">#E1E1E1</Color>
             <Color x:Key="PanelSelectedBackgroundDark">#3E3E3E</Color>
             <Color x:Key="PanelSelectedBackgroundLight">#C1C1C1</Color>
+            <Color x:Key="CardBorderStrokeDark">#3E3E3E</Color>
+            <Color x:Key="CardBorderStrokeLight">#C1C1C1</Color>
             <Color x:Key="WarningColorDark">#FF9900</Color>
             <Color x:Key="WarningColorLight">#C05A00</Color>
             <Color x:Key="ErrorColorDark">#FF3D43</Color>
@@ -42,7 +44,9 @@
             <Color x:Key="ToolbarIconColorFadedLight">#999999</Color>
 
             <x:Double x:Key="FontSizeHeader">20</x:Double>
-            <x:Double x:Key="FontSizeHeaderMinor">18</x:Double>
+            <OnPlatform x:Key="FontSizeHeaderMinor" x:TypeArguments="x:Double" Default="18">
+                <On Platform="WinUI">16</On>
+            </OnPlatform>
             <x:Double x:Key="FontSizeNormal">13</x:Double>
             <x:Double x:Key="FontSizeDetails">12</x:Double>
             <OnPlatform x:Key="HeaderFavoriteStarSize" x:TypeArguments="x:Double" Default="16">
@@ -109,10 +113,10 @@
                 <Setter Property="MaxLines" Value="1" />
             </Style>
 
-            <Style x:Key="AlubumItem" TargetType="Grid">
-                <Setter Property="WidthRequest" Value="160" />
-                <Setter Property="HeightRequest" Value="228" />
-                <Setter Property="Padding" Value="{OnPlatform WinUI='0', Default='0'}" />
+            <Style x:Key="AlbumItem" TargetType="Grid">
+                <Setter Property="WidthRequest" Value="176" />
+                <Setter Property="HeightRequest" Value="244" />
+                <Setter Property="Padding" Value="8" />
                 <Setter Property="Margin" Value="0,0" />
                 <Setter Property="ColumnDefinitions" Value="40, *" />
                 <Setter Property="RowDefinitions" Value="20, 168, 20, 20" />
@@ -132,6 +136,21 @@
                 <Setter Property="LineBreakMode" Value="TailTruncation" />
             </Style>
 
+            <Style x:Key="Card" TargetType="Border">
+                <Setter Property="Background" Value="{AppThemeBinding Dark={StaticResource PanelBackgroundDark}, Light={StaticResource PanelBackgroundLight}}" />
+                <Setter Property="Stroke" Value="{AppThemeBinding Dark={StaticResource CardBorderStrokeDark}, Light={StaticResource CardBorderStrokeLight}}" />
+                <Setter Property="StrokeThickness" Value="2" />
+                <Setter Property="StrokeShape" Value="RoundRectangle 12" />
+            </Style>
+
+            <Style x:Key="AlbumCard" TargetType="Border" BasedOn="{StaticResource Card}">
+                <Setter Property="WidthRequest" Value="188" />
+                <Setter Property="HeightRequest" Value="252" />
+            </Style>
+
+            <Style x:Key="CardGridContent" TargetType="Grid">
+                <Setter Property="Padding" Value="8" />
+            </Style>
 
             <Style x:Key="HyperlinkStyle" TargetType="Span">
                 <Setter Property="TextColor" Value="{AppThemeBinding Dark={StaticResource HyperlinkColorDark}, Light={StaticResource HyperlinkColorLight}}" />
@@ -155,7 +174,6 @@
 
             <Style x:Key="HyperlinkButton" TargetType="Button">
                 <Setter Property="TextColor" Value="{AppThemeBinding Dark={StaticResource HyperlinkColorDark}, Light={StaticResource HyperlinkColorLight}}" />
-                <Setter Property="LineBreakMode" Value="TailTruncation" />
                 <Setter Property="BackgroundColor" Value="Transparent" />
                 <Setter Property="HeightRequest" Value="36" />
                 <Setter Property="Padding" Value="4,0" />
